fixed influencer relation css gap

--- a/src/ui/screens/user-profile/Components/InfluencerRelation.module.css
+++ b/src/ui/screens/user-profile/Components/InfluencerRelation.module.css
@@ -184,6 +184,7 @@
 }
 
 .lastCallSection {
+  margin-top: 16px;
   width: 100%;
   display: flex;
   flex-direction: column;
